<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="main.detail.DetailFilmActivity">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/layout_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/iv_film_posterdetail"
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.032"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/tv_film_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/iv_film_posterdetail"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/iv_film_posterdetail"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintVertical_bias="0.0"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/releasedate"
                android:textSize="20sp"
                android:id="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/iv_film_posterdetail"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_film_releasedate"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintHorizontal_bias="0.1"/>

        <TextView
                android:id="@+id/tv_film_releasedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/iv_film_posterdetail"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintHorizontal_bias="0.1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runningtime"
                android:textSize="20sp"
                android:id="@+id/textView2"
                app:layout_constraintBottom_toTopOf="@+id/tv_film_runningtime"
                app:layout_constraintStart_toEndOf="@+id/iv_film_posterdetail"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.128"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/tv_film_runningtime"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/iv_film_posterdetail"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productioncompanies"
                android:textSize="20sp"
                android:id="@+id/textView3"
                app:layout_constraintBottom_toTopOf="@+id/tv_film_productioncompanies"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_film_posterdetail"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.29"/>

        <TextView
                android:id="@+id/tv_film_productioncompanies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/iv_film_posterdetail"
                app:layout_constraintTop_toTopOf="@+id/iv_film_posterdetail"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/iv_film_posterdetail"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.027"
                android:id="@+id/textView4"/>

        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/scrollView2">

            <TextView
                    android:id="@+id/tv_film_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_circular"
            android:layout_gravity="center"/>

</FrameLayout>